--- a/amazon.html
+++ b/amazon.html
@@ -1,15 +1,14 @@
 <!DOCTYPE html>
-<html>
-
+<html lang="en">
 <head>
-    <title>Amazon</title>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css"
-        integrity="sha512-SnH5WK+bZxgPHs44uWIX+LLJAJ9/2PkPKZ5QiAj6Ta86w+fsb2TkcmfRyVX3pBnMFcV7oQPJkl9QevSCWr3W6A=="
-        crossorigin="anonymous" referrerpolicy="no-referrer" />
-    <link rel="stylesheet" href="amazonstyle.css">
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Amazon Clone</title>
+    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css">
 </head>
-
 <body>
+    <!-- Navbar -->
     <header>
         <div class="navbar">
             <div class="navlogo border">
@@ -23,12 +22,13 @@
                 </div>
             </div>
             <div class="navsearch">
-                <select class="all" name="All">
+                <select class="all">
                     <option>All</option>
-                    <option>Baby</option>
-                    <option>Beauty products</option>
-                    <option>Fashion</option>
-                    <option>Accessories</option>
+                    <option>Clothes</option>
+                    <option>Beauty</option>
+                    <option>Electronics</option>
+                    <option>Furniture</option>
+                    <option>Pet Care</option>
                 </select>
                 <input placeholder="Search Amazon" class="search">
                 <div class="navsearchicon">
@@ -42,172 +42,73 @@
                 </div>
             </div>
             <div class="signin border">
-                <p style="font-size:12px;"><span>Hello,sign in</span></p>
-                <p style="font-size:14px; font-weight: 700;">Accounts & Lists</p>
+                <p><span>Hello, sign in</span></p>
+                <p class="bold">Accounts & Lists</p>
             </div>
             <div class="orders border">
-                <p style="font-size:12px;"><span>Returns</span></p>
-                <p style="font-size:14px; font-weight: 700;">& Orders</p>
+                <p><span>Returns</span></p>
+                <p class="bold">& Orders</p>
             </div>
             <div class="navcart border">
-                <i class="fa-solid fa-cart-shopping"></i>
-                Cart
-            </div>
-        </div>
-        <div class="panel ">
-            <div class="panelall border">
-                <i class="fa-solid fa-bars"></i>
-                All
-            </div>
-            <div class="panelops">
-                <p class="border">Today Deals</p>
-                <p class="border">Customer Service</p>
-                <p class="border">Registry</p>
-                <p class="border">Gift Cards</p>
-                <p class="border">Sell</p>
-            </div>
-            <div class="paneldeals border">
-                Shop Deals in Electronics
+                <i class="fa-solid fa-cart-shopping"></i> Cart (0)
             </div>
         </div>
     </header>
+
+    <!-- Hero Section -->
     <div class="hero">
         <div class="msg">
-            <p>You are on amazon.com. You can also shop on Amazon India for millions of products with fast local
-                delivery.
-                <a>Click here to go to amazon.in</a>
-            </p>
+            <p>You are on amazon.com. Shop on Amazon India for local delivery. 
+            <a href="#">Click here</a></p>
         </div>
     </div>
+
+    <!-- Products -->
     <div class="shop">
-        <div class="box1 box">
+        <div class="box" data-category="clothes">
             <div class="con1">
                 <h2>Clothes</h2>
                 <div class="img1" style="background-image: url('./images/box1_image.jpg');"></div>
-
-                <a style="color:#007185;">See more</a>
+                <button class="add-cart">Add to Cart</button>
             </div>
         </div>
-        <div class="box2  box">
-            <div class="con1">
-                <h2>Health & Personal Care</h2>
-                <div class="img1" style="background-image: url('./images/box2_image.jpg');"></div>
-
-                <a style="color:#007185;">See more</a>
-            </div>
-        </div>
-        <div class="box3  box">
-            <div class="con1">
-                <h2>Furniture</h2>
-                <div class="img1" style="background-image: url('./images/box3_image.jpg');"></div>
-
-                <a style="color:#007185;">See more</a>
-            </div>
-        </div>
-        <div class="box4 box">
-            <div class="con1">
-                <h2>Electronics</h2>
-                <div class="img1" style="background-image: url('./images/box4_image.jpg');"></div>
-
-                <a style="color:#007185;">See more</a>
-            </div>
-        </div>
-
-        <div class="box5 box">
+        <div class="box" data-category="beauty">
             <div class="con1">
                 <h2>Beauty</h2>
                 <div class="img1" style="background-image: url('./images/box5_image.jpg');"></div>
-
-                <a style="color:#007185;">See more</a>
+                <button class="add-cart">Add to Cart</button>
             </div>
         </div>
-        <div class="box6  box">
+        <div class="box" data-category="electronics">
             <div class="con1">
-                <h2>Pet Care</h2>
-                <div class="img1" style="background-image: url('./images/box6_image.jpg');"></div>
-
-                <a style="color:#007185;">See more</a>
+                <h2>Electronics</h2>
+                <div class="img1" style="background-image: url('./images/box4_image.jpg');"></div>
+                <button class="add-cart">Add to Cart</button>
             </div>
         </div>
-        <div class="box7 box">
+        <div class="box" data-category="furniture">
             <div class="con1">
-                <h2>Toys</h2>
-                <div class="img1" style="background-image: url('./images/box7_image.jpg');"></div>
-
-                <a style="color:#007185;">See more</a>
+                <h2>Furniture</h2>
+                <div class="img1" style="background-image: url('./images/box3_image.jpg');"></div>
+                <button class="add-cart">Add to Cart</button>
             </div>
         </div>
-        <div class="box8 box">
-            <div class="con1">
-                <h2>Discover Fashion Trends</h2>
-                <div class="img1" style="background-image: url('./images/box8_image.jpg');"></div>
-
-                <a style="color:#007185;">See more</a>
-            </div>
-        </div>
-
     </div>
 
-    </div>
+    <!-- Footer -->
     <footer>
-        <div class="pan1">
-            Back to top
-        </div>
-        <div class="pan2">
-            <ul>
-                <p>Get to Know Us</p>
-                <a> Careers</a>
-                <a> Blog</a>
-                <a> About Amazon</a>
-                <a>Investor Relations</a>
-                <a> Amazon Devices</a>
-                <a>Amazon Science</a>
-            </ul>
-            <ul>
-                <p>Make Money with Us</p>
-                <a>Sell products on Amazon</a>
-                <a>Sell on Amazon Business</a>
-                <a>Sell apps on Amazon</a>
-                <a>Become an Affiliate</a>
-                <a>Advertise Your Products</a>
-                <a>Self-Publish with Us</a>
-                <a>Host an Amazon Hub</a>
-                <a>›See More Make Money with Us</a>
-            </ul>
-            <ul>
-                <p>Amazon Payment Products</p>
-                <a>Amazon Business Card</a>
-                <a>Shop with Points</a>
-                <a> Reload Your Balance</a>
-                <a>Amazon Currency Converter</a>
-
-            </ul>
-            <ul>
-                <p>Let Us Help You</p>
-                <a>Amazon and COVID-19</a>
-                <a>Your Account</a>
-                <a>Your Orders</a>
-                <a>Shipping Rates & Policies</a>
-                <a>Returns & Replacements</a>
-                <a>Manage Your Content and Devices</a>
-                <a>Amazon Assistant</a>
-                <a>Help</a>
-            </ul>
-        </div>
-        <div class="pan3">
-            <div class="log"></div>
-        </div>
+        <div class="pan1">Back to top</div>
         <div class="pan4">
             <div class="pages">
-                <a>conditions of Use</a>
-                <a>Privacy Notice</a>
-                <a>Your add Privacy Choices</a>
+                <a href="#">Conditions of Use</a>
+                <a href="#">Privacy Notice</a>
             </div>
             <div class="copyright">
-                © 1996-2024, Amazon.com, Inc. or its affiliates
+                © 1996-2024, Amazon.com, Inc.
             </div>
         </div>
     </footer>
-</body>
 
+    <script src="script.js"></script>
+</body>
 </html>
